@@ -1,6 +1,11 @@
 2019-11-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/SDCC.y:
+	  Allow C2X attribute declarations.
+
+2019-11-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCC.y:
 	  Reorganize grammar by appendix A.2 of C2X.
 
 2019-11-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
